Add transmit and record operations